# pipecat-lokutor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: groq-stt-groq-llm-lokutor-tts.py
src/pipecat_lokutor/: __init__.py  tts.py
