[project]
name = "pipecat-lokutor"
version = "0.1.0"
description = "Lokutor TTS integration for Pipecat"
readme = "README.md"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "Lokutor AI", email = "your-email@lokutor.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai>=0.0.86",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipecat_lokutor"]

[tool.hatch.build.targets.sdist]
packages = ["src/pipecat_lokutor"]

[project.urls]
Homepage = "https://github.com/lokutor-ai/pipecat-lokutor"
Source = "https://github.com/lokutor-ai/pipecat-lokutor"
